DevOps HW: Terraform EC2 nginx with S3+DynamoDB backend

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,11 @@
 **/*.tfstate.*
 **/terraform.tfvars
 **/crash.log
+
+# Terraform
+**/.terraform/
+**/*.tfstate
+**/*.tfstate.*
+**/terraform.tfvars
+**/backend.hcl
+**/*.pem
