--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,16 @@
-
 # Terraform
-**/.terraform/
-**/*.tfstate
-**/*.tfstate.*
-**/terraform.tfvars
-**/crash.log
+.terraform/
+*.tfstate
+*.tfstate.*
+crash.log
+*.tfplan
+*.tfvars
 
-# Terraform
-**/.terraform/
-**/*.tfstate
-**/*.tfstate.*
-**/terraform.tfvars
-**/backend.hcl
-**/*.pem
+# Ansible
+*.retry
+ansible/inventory.ini
 
-# Terraform secrets/state
-**/terraform.tfvars
-**/*.tfstate
-**/*.tfstate.*
-**/.terraform/
-**/.terraform.lock.hcl
-terraform/ec2/terraform.tfvars
-terraform/lemp/terraform.tfvars
-terraform/lemp/ansible/group_vars/all.yml
+# OS/IDE
+.DS_Store
+.vscode/
+.idea/
