ci: skip repo checkout for python publish job

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -173,3 +173,5 @@ publish_python_artifactory:
           -T "$f" \
           "$ARTIFACTORY_URL_PYTHON/artifactory/$ARTIFACTORY_REPO/python-app/$VERSION/$(basename "$f")"
       done
+  variables:
+    GIT_STRATEGY: none
