--- a/python-app/pyproject.toml
+++ b/python-app/pyproject.toml
@@ -1,8 +1,16 @@
 [project]
 name = "python-app"
 version = "0.1.0"
+readme = "README.md"
 requires-python = ">=3.10"
 dependencies = []
+
+[build-system]
+requires = ["setuptools>=68", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+packages = ["python_app"]
 
 [tool.ruff]
 line-length = 100
