--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,13 @@
 **/*.tfstate.*
 **/terraform.tfvars
 **/crash.log
+
+# Python
+**/.venv*/
+**/dist/
+**/build/
+**/*.egg-info/
+**/.pytest_cache/
+**/.coverage
+**/coverage.xml
+**/__pycache__/
