--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,11 +26,12 @@ tf_fmt_validate:
 
 tflint:
   stage: lint
-  image: ghcr.io/terraform-linters/tflint:v0.53.0
+  image:
+    name: ghcr.io/terraform-linters/tflint:v0.53.0
+    entrypoint: [""]
   script:
-    - cd "$TF_DIR"
-    - tflint --init
-    - tflint -f compact
+    - tflint --chdir="$TF_DIR" --init
+    - tflint --chdir="$TF_DIR" -f compact
   rules:
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
     - if: $CI_COMMIT_BRANCH
