--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-stages: [lint, test, security, sonar, build, publish]
+stages: [lint, test, security, sonar, build, publish, deploy, cleanup]
 
 variables:
   GIT_DEPTH: "0"
@@ -7,6 +7,8 @@ variables:
   TF_INPUT: "false"
   TF_DIR: "terraform-hw3"
   TERRAFORM_MODULE_SYSTEM: "gitlab"
+  DEPLOY_TF_DIR: "deploy/terraform"
+  ANSIBLE_DIR: "deploy/ansible"
 
 # ---------------------------
 # Terraform module pipeline
@@ -126,6 +128,7 @@ py_lint:
   rules:
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
     - if: $CI_COMMIT_BRANCH
+    - if: $CI_COMMIT_TAG
 
 py_tests:
   stage: test
@@ -142,6 +145,7 @@ py_tests:
   rules:
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
     - if: $CI_COMMIT_BRANCH
+    - if: $CI_COMMIT_TAG
 
 sonarqube_python:
   stage: sonar
@@ -162,6 +166,7 @@ sonarqube_python:
   rules:
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
     - if: $CI_COMMIT_BRANCH
+    - if: $CI_COMMIT_TAG
 
 py_build:
   stage: build
@@ -178,6 +183,7 @@ py_build:
   rules:
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
     - if: $CI_COMMIT_BRANCH
+    - if: $CI_COMMIT_TAG
 
 publish_python_artifactory:
   stage: publish
@@ -203,3 +209,78 @@ publish_python_artifactory:
       done
   variables:
     GIT_STRATEGY: none
+
+# ---------------------------
+# CD: AWS + Ansible
+# ---------------------------
+
+tf_apply_aws:
+  stage: deploy
+  image:
+    name: hashicorp/terraform:1.6.6
+    entrypoint: [""]
+  rules:
+    - if: '$CI_COMMIT_TAG =~ /^py-v\\d+\\.\\d+\\.\\d+.*$/'
+  script:
+    - cd "$DEPLOY_TF_DIR"
+    - test -n "$AWS_PUBLIC_KEY"
+    - terraform init
+    - terraform apply -auto-approve
+    - APP_IP="$(terraform output -raw public_ip)"
+    - cd "$CI_PROJECT_DIR"
+    - mkdir -p "$ANSIBLE_DIR"
+    - printf "[app]\\n%s ansible_user=ec2-user\\n" "$APP_IP" > "$ANSIBLE_DIR/inventory.ini"
+  variables:
+    TF_VAR_public_key: "$AWS_PUBLIC_KEY"
+    TF_VAR_key_name: "${AWS_KEY_NAME:-ci-deploy-key}"
+    TF_VAR_app_port: "${APP_PORT:-8080}"
+    TF_VAR_aws_region: "${AWS_DEFAULT_REGION:-us-east-1}"
+  artifacts:
+    paths:
+      - deploy/terraform/terraform.tfstate
+      - deploy/terraform/terraform.tfstate.backup
+      - deploy/ansible/inventory.ini
+    expire_in: 7 days
+
+ansible_deploy:
+  stage: deploy
+  image: python:3.12-slim
+  needs:
+    - job: tf_apply_aws
+      artifacts: true
+    - job: py_build
+      artifacts: true
+  rules:
+    - if: '$CI_COMMIT_TAG =~ /^py-v\\d+\\.\\d+\\.\\d+.*$/'
+  script:
+    - apt-get update -y
+    - apt-get install -y openssh-client
+    - pip install -U pip ansible
+    - mkdir -p ~/.ssh
+    - test -n "$AWS_SSH_PRIVATE_KEY"
+    - echo "$AWS_SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+    - chmod 600 ~/.ssh/id_rsa
+    - export ANSIBLE_HOST_KEY_CHECKING=False
+    - ARTIFACT_PATH="$(ls python-app/dist/*.whl | head -n 1)"
+    - ansible-playbook -i "$ANSIBLE_DIR/inventory.ini" "$ANSIBLE_DIR/playbook.yml" -e "artifact_path=$ARTIFACT_PATH app_port=${APP_PORT:-8080}"
+
+tf_destroy_aws:
+  stage: cleanup
+  image:
+    name: hashicorp/terraform:1.6.6
+    entrypoint: [""]
+  needs:
+    - job: tf_apply_aws
+      artifacts: true
+  rules:
+    - if: '$CI_COMMIT_TAG =~ /^py-v\\d+\\.\\d+\\.\\d+.*$/'
+      when: manual
+  script:
+    - cd "$DEPLOY_TF_DIR"
+    - terraform init
+    - terraform destroy -auto-approve
+  variables:
+    TF_VAR_public_key: "$AWS_PUBLIC_KEY"
+    TF_VAR_key_name: "${AWS_KEY_NAME:-ci-deploy-key}"
+    TF_VAR_app_port: "${APP_PORT:-8080}"
+    TF_VAR_aws_region: "${AWS_DEFAULT_REGION:-us-east-1}"
