--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -219,7 +219,7 @@ tf_apply_aws:
     name: hashicorp/terraform:1.6.6
     entrypoint: [""]
   rules:
-    - if: '$CI_COMMIT_TAG =~ /^py-v\\d+\\.\\d+\\.\\d+.*$/'
+    - if: '$CI_COMMIT_TAG =~ /^py-v\d+\.\d+\.\d+.*$/'
   script:
     - cd "$DEPLOY_TF_DIR"
     - test -n "$AWS_PUBLIC_KEY"
@@ -250,7 +250,7 @@ ansible_deploy:
     - job: py_build
       artifacts: true
   rules:
-    - if: '$CI_COMMIT_TAG =~ /^py-v\\d+\\.\\d+\\.\\d+.*$/'
+    - if: '$CI_COMMIT_TAG =~ /^py-v\d+\.\d+\.\d+.*$/'
   script:
     - apt-get update -y
     - apt-get install -y openssh-client
@@ -272,7 +272,7 @@ tf_destroy_aws:
     - job: tf_apply_aws
       artifacts: true
   rules:
-    - if: '$CI_COMMIT_TAG =~ /^py-v\\d+\\.\\d+\\.\\d+.*$/'
+    - if: '$CI_COMMIT_TAG =~ /^py-v\d+\.\d+\.\d+.*$/'
       when: manual
   script:
     - cd "$DEPLOY_TF_DIR"
