--- a/task12-loadbalancers/docker-compose.yml
+++ b/task12-loadbalancers/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     image: traefik:v2.11
     command:
       - "--api.dashboard=true"
+      - "--api.insecure=true"
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
       - "--entrypoints.web.address=:80"
